<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_percent"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_delete"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toEndOf="@id/button_percent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_clear"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_division"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_seven"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_percent" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_eight"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toBottomOf="@id/button_delete" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_nine"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toBottomOf="@id/button_clear" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiplication"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_division" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_four"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_five"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_eight" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_six"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_nine" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_multiplication" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_one"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_four" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_two"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_three"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_six" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_zero"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_two" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_from_button"
        android:text="@string/button_pt"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button_result"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_three" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_result"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>